# xdg-mini-launcher

./: .gitignore  Makefile.am  README  configure.ac
etc/: xdg-mini-launcher.menu
etc/applications/: clock.desktop  firefox.desktop  settings.desktop  terminal.desktop
etc/directories/: top.directory  utilities.directory
lib/: Makefile.am
lib/ezxml/: Makefile.am
lib/inih/: Makefile.am
lib/wmctrl/: Makefile.am  wmctrl.c
src/: Makefile.am  abstract_entry.cpp  abstract_entry.hpp  application_entry.cpp  application_entry.hpp  directory_entry.cpp  directory_entry.hpp  entry_factory.cpp  entry_factory.hpp  font.hpp  grid.cpp  grid.hpp  main.cpp  menu_entry.cpp  menu_entry.hpp  process.cpp  process.hpp  property.hpp  signal.hpp  toolbutton.cpp  toolbutton.hpp  widget.cpp  widget.hpp  wmctrl.h  wmdesktop.cpp  wmdesktop.hpp  x11info.cpp  x11info.hpp  xdginfo.cpp  xdginfo.hpp
tests/: Makefile.am  test_process.cpp
